--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="container text-center">
         <h1 class="mt-5">HTML Editor - Online Word to HTML Converter, Formatter and Cleaner</h1>
         <p>The real-time online HTML editor with live visual previews, WYSIWYG editing, and easy Word to HTML conversion, plus formatting and cleaning tools.</p>
         <p><a href="https://unminifydev.com/html-editor/">UnminifyDev</a></p>
